--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubarmenu.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/menubar/menubarmenu.css
@@ -6,8 +6,8 @@
 .ck.ck-menu-bar__menu {
 	/* Enable font size inheritance, which allows fluid UI scaling. */
 	font-size: inherit;
-}
 
-.ck.ck-menu-bar__menu_top-level > button {
-	max-width: 200px;
+	&.ck-menu-bar__menu_top-level {
+		max-width: 100%;
+	}
 }
